# dynvo

./: .dockerignore  .gitignore  .pypirc  CHANGELOG.md  Dockerfile  LICENSE  README.md  action.yml  proto_final.py  proto_recurse.py  proto_recurse2.py  pyproject.toml  scripts_validate_monorepo_assembly.py
.github/workflows/: ci.yml  release.yml  self-test.yml
action/: pr_comment.py
benchmarks/apprise/: feature-map-fewshot.json  feature-map-final.json
benchmarks/apprise-gemini/: feature-map-final.json
benchmarks/apprise-gemini-31/: feature-map-final.json
benchmarks/documenso/: feature-map-final.json
benchmarks/fastapi/: feature-map-final.json
benchmarks/inbox-zero/: feature-map-final.json
benchmarks/infisical/: .faultline.yaml
benchmarks/maybe/: feature-map-final.json
benchmarks/maybe-gemini/: feature-map-final.json
benchmarks/meilisearch/: feature-map-final.json
benchmarks/ollama/: feature-map-final.json
benchmarks/papermark/: feature-map-final.json
benchmarks/rallly/: feature-map-final.json
benchmarks/soc0/: feature-map-final.json
benchmarks/uptime-kuma/: feature-map-final.json
eval/: README.md  STRUCTURAL-AUDIT.md  STRUCTURAL-BASELINE.json  _replay_post_process.py  dependency-anchors.yaml  di-patterns.yaml  run_structural_corpus.sh  structural_audit.py  system-flow-patterns.yaml
eval/membership/: BASELINE.md  NAMES-BASELINE.md  score_membership.py  score_names.py
eval/stacks/: config-manifests.yaml  express.yaml  fastapi.yaml  filesystem-routing.yaml  mvc-controllers.yaml  rust-workspace.yaml
eval/uf-golden/: score_user_flows.py
faultline/: __init__.py  _streaming_autoenable.py  cli.py  factory.py  mcp_context.py  mcp_server.py  protocols.py  results.py  signals.py
faultline/aggregators/: __init__.py  auto_split.py  critique.py  display_name_canonicalizer.py  feature_dedup.py  feature_protection.py  flow_attribution_critique.py  flow_consolidator.py  flow_reattribution.py  sibling_router_collapse.py  zero_flow_recovery.py
faultline/analyzer/: assignments.py  ast_extractor.py  blame_index.py  cargo_classifier.py  evolve.py  feature_category.py  feature_compaction.py  features.py  git.py  import_graph.py  marketing_fetcher.py  post_process.py  repo_classifier.py  repo_config.py  reverse_imports.py  symbol_graph.py  test_mapper.py  tsconfig_paths.py  validation.py  workspace.py
faultline/cache/: __init__.py  backend.py  discovery.py  paths.py
faultline/cloud/: __init__.py
faultline/diagnostics/: __init__.py  artifacts.py
faultline/digest/: cli.py  summarizer.py
faultline/extractors/: __init__.py  dependency_context.py  go_module.py  jsx_nav.py  mvc_controller.py  package_anchor.py  plugin_module.py  python_framework_module.py  python_package_subdir.py  route_file.py  route_segment.py  schema_domain.py  schema_relations.py  server_actions.py  test_file.py  trpc_router.py  ts_library_exports.py
faultline/framework_linkers/: __init__.py  _discovery.py  base.py  nextjs_http_route.py  nextjs_server_actions.py  store_mutation.py  trpc_procedure.py
faultline/impact/: cochange.py  mcp_tools.py
faultline/llm/: aggregator_agent.py  aggregator_detector.py  client.py  client_factory.py  cost.py  critique.py  decision_log.py  dedup.py  detector.py  factory.py  few_shot_examples.py  flow_detector.py  flow_detector_gemini.py  flow_detector_v2.py  flow_judge.py  flow_sweep.py  flow_symbols.py  gemini_fallback.py  hierarchical.py  iterative_detector.py  model_gateway.py  path_embeddings.py  pipeline.py  recall_critique_runner.py  rename_generic.py  sonnet_scanner.py  stack_detector.py  stage_context.py  tool_use_scan.py
faultline/models/: types.py
faultline/output/: reporter.py  writer.py
faultline/pipeline_v2/: __init__.py  anchor_extractors.py  artifact_ink.py  auto_partition.py  census_join.py  conservation.py  degradations.py  dev_mint_discriminator.py  devgrain_demote.py  dispatch_homing.py  dispatch_registry.py  domain_noun.py  dominant_evidence.py  dual_evidence.py  e2e_truth.py  emission_integrity.py  file_lane.py  flow_grain.py  flow_name_v2.py  flow_reach.py  incremental.py  (+127 more)
faultlines-integrations/: pyproject.toml
faultlines-integrations/faultlines_integrations/: __init__.py  cli.py  enrich.py  models.py  posthog.py  sentry.py
faultlines-integrations/tests/: test_enrich.py  test_providers.py
faultlines-mcp/: Dockerfile  README.md  fly.toml  pyproject.toml
faultlines-mcp/faultlines_mcp/: __init__.py  core.py  http_service.py  server.py
faultlines-mcp/faultlines_mcp/tools/: __init__.py  impact.py  symbols.py
saas-dashboard/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: bump_minor_version.py  eval_run.py  landing_codegen.py  mock_analytics_server.py
tests/: _profile_inertness.py  test_align_v2_grain_gate.py  test_anchor_extractors.py  test_approuter_keyless.py  test_ast_extractor.py  test_auto_partition_assembly.py  test_auto_split.py  test_backstop_owned_cover_b13.py  test_blame_index_perf.py  test_cache_backend.py  test_cache_backend_integration.py  test_cli_auto_partition.py  test_cli_scan.py  test_cli_scan_v2.py  test_cloud.py  test_cost.py  test_critique_aggregator.py  test_critique_json_parsing.py  test_critique_streaming_truncation.py  test_decision_log.py  test_degradation_stamp.py  test_degradations.py  test_dependency_context.py  test_det_aggregation.py  test_digest_stratification.py  test_display_name_canonicalizer.py  test_domain_noun.py  test_dual_evidence.py  test_emission_integrity.py  test_extractor_django.py  test_extractor_express.py  test_extractor_fastify.py  test_extractor_go_packages.py  test_extractor_go_router.py  test_extractor_js_library.py  test_extractor_js_library_source_modules.py  test_extractor_python_library.py  test_extractor_rails_helpers.py  test_extractor_rails_jobs.py  test_extractor_rails_models.py  (+205 more)
tools/: ast_killswitch_check.sh  ast_metrics_ab.py  py_ast_metrics_ab.py  sim_ab_recurse.py  sim_corpus_run.py  sim_stage_8_9_subdecompose.py
validation/: __main__.py  config.py  models.py  progress.py  run.py
worker/: __init__.py  dev.py  main.py
(+478 files in other folders)
