[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faultlines"
version = "0.1.0"
description = "Map features in any codebase from git history alone. No Jira required."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Faultlines" },
]
keywords = [
    "git", "features", "technical-debt", "code-analysis",
    "engineering-metrics", "bug-fix-ratio", "health-score",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.0",
    "gitpython>=3.1.40",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "anthropic>=0.25.0",
    # Stack pattern YAML loader — used by Stage 1 stack-gated extractors
    # (go_router, rust_workspace, python_library) to read patterns
    # from eval/stacks/*.yaml.
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4.0"]
deepseek = ["openai>=1.0.0"]
analytics = ["httpx>=0.27.0"]
mcp = ["mcp>=1.0.0"]
watch = ["watchdog>=4.0.0"]
trace = [
    "tree-sitter>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
]

[project.urls]
Homepage = "https://faultlines.dev"
Repository = "https://github.com/PashaSchool/faultlines"
Issues = "https://github.com/PashaSchool/faultlines/issues"

[project.scripts]
faultlines = "faultline.cli:app"
faultlines-mcp = "faultline.mcp_server:main"
# Keep the old name as alias for backwards compat

# Stage 1 extractor plugin group. The orchestrator at
# ``faultline.pipeline_v2.stage_1_extractors`` discovers extractors
# via this group; customers can register their own by adding a
# module that defines an ``AnchorExtractor``-compatible class and
# declaring an entry-point in the same group.
[project.entry-points."faultlines.extractors"]
route          = "faultline.pipeline_v2.extractors.route:RouteFileExtractor"
mvc            = "faultline.pipeline_v2.extractors.mvc:MVCControllerExtractor"
schema         = "faultline.pipeline_v2.extractors.schema:SchemaDomainExtractor"
package        = "faultline.pipeline_v2.extractors.package:PackageAnchorExtractor"
config         = "faultline.pipeline_v2.extractors.config:ConfigAsProductExtractor"
# Sprint A4 — stack-gated extractors.
go-router      = "faultline.pipeline_v2.extractors.go_router:GoRouterExtractor"
rust-workspace = "faultline.pipeline_v2.extractors.rust_workspace:RustWorkspaceExtractor"
python-library = "faultline.pipeline_v2.extractors.python_library:PythonLibraryExtractor"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/"

[tool.hatch.build.targets.wheel]
packages = ["faultline"]

[tool.pytest.ini_options]
addopts = [
    "--cov=faultline",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-config=pyproject.toml",
    "-q",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["faultline"]
omit = [
    "faultline/llm/detector.py",
    "faultline/llm/deepseek_client.py",
    "faultline/llm/flow_detector.py",
    "faultline/cli.py",
    "faultline/digest/*",
    "faultline/integrations/*",
    "faultline/output/reporter.py",
    "faultline/analyzer/evolve.py",
    "faultline/analyzer/incremental.py",
    "faultline/analyzer/shared_files.py",
]

[tool.coverage.report]
fail_under = 65
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
precision = 1

[tool.coverage.html]
directory = "htmlcov"
