[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faultlines-integrations"
version = "0.1.0"
description = "Analytics enrichment for Faultlines feature maps (PostHog, Sentry)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Faultlines" }]
license = { text = "Proprietary" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
faultlines-enrich = "faultlines_integrations.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["faultlines_integrations"]
