[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faultlines-mcp"
version = "0.1.0"
description = "MCP server for the Faultlines feature map — serve precise codebase context to AI coding agents (Cursor, Claude Code, Cline, Aider) instead of having them grep the repo."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Faultlines" }]
keywords = [
  "mcp", "model-context-protocol", "ai-agents",
  "cursor", "claude-code", "cline", "aider",
  "code-intelligence", "feature-map",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "mcp>=1.0.0",
  # Engine import surface today is intentionally one symbol
  # (faultline.impact.risk.predict_impact). Everything else MCP needs is
  # read from the feature-map JSON via path. When this package ships
  # standalone on PyPI, pin a stable engine version range here.
  "faultlines",
]

[project.urls]
Homepage = "https://faultlines.dev"
Repository = "https://github.com/PashaSchool/faultlines"
"Engine package" = "https://pypi.org/project/faultlines/"

[project.scripts]
faultlines-mcp = "faultlines_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["faultlines_mcp"]

# uv workspace integration — resolve the `faultlines` engine dep from the
# sibling workspace member (this repo's root) instead of PyPI when developing
# locally. Released wheels keep the PyPI-range dep; the workspace source
# block only affects `uv sync` inside this monorepo.
[tool.uv.sources]
faultlines = { workspace = true }
