[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faultlines-mcp"
version = "0.3.0"
description = "MCP server for the Faultlines feature map — serve precise codebase context to AI coding agents (Cursor, Claude Code, Cline, Aider) instead of having them grep the repo."
readme = { text = "MCP server for the Faultlines feature map — serve precise codebase context (features, flows, owners, hotspots, symbols, impact) to AI coding agents like Cursor and Claude Code instead of having them grep the repo. Standalone, engine-free. See https://faultlines.dev", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Faultlines" }]
keywords = [
  "mcp", "model-context-protocol", "ai-agents",
  "cursor", "claude-code", "cline", "aider",
  "code-intelligence", "feature-map",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  # Fully standalone: the MCP server reads the feature-map JSON directly
  # and has ZERO dependency on the `faultlines` engine package. Pure
  # stdlib + the MCP protocol library. Auto-refresh (optional) shells out
  # to the `faultlines` CLI via subprocess — never an import.
  "mcp>=1.0.0",
]

[project.optional-dependencies]
# HTTP service mode (the hosted dashboard proxies to it). Kept OPTIONAL so a
# plain `pip install faultlines-mcp` for local stdio use stays lean and never
# pulls in a web framework. The stdio path never imports fastapi/uvicorn.
http = [
  "fastapi",
  "uvicorn[standard]",
]

[project.urls]
Homepage = "https://faultlines.dev"
Repository = "https://github.com/PashaSchool/faultlines"
"Engine package" = "https://pypi.org/project/faultlines/"

[project.scripts]
faultlines-mcp = "faultlines_mcp:main"
# HTTP service entry point (requires the `http` extra → fastapi + uvicorn).
faultlines-mcp-serve = "faultlines_mcp.http_service:main"

[tool.hatch.build.targets.wheel]
packages = ["faultlines_mcp"]
